<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:columnCount="2"
    tools:context=".PatientData">


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <TextView
            android:id="@+id/imieTextV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_margin="3pt"
            android:layout_row="0"
            android:text="@string/imieTextV"
            android:textColor="@android:color/background_light"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/imieValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_margin="3pt"
            android:layout_row="0"
            android:text="Janusz"
            android:textColor="@android:color/background_light"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/nazwiskoTextV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_margin="3pt"
            android:layout_row="1"
            android:text="@string/nazwiskoTextV"
            android:textColor="@android:color/background_light"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/nazwiskoValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_margin="3pt"
            android:layout_row="1"
            android:text="Hebata"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/dataUroTextV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_margin="3pt"
            android:layout_row="2"
            android:text="@string/dataUroTextV"
            android:textColor="@android:color/background_light"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/dataUroValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_margin="3pt"

            android:layout_row="2"
            android:text="01.01.1991"
            android:textColor="@android:color/background_light"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/peselTextV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_margin="3pt"
            android:layout_row="3"
            android:text="@string/peselTextV"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"  />


        <TextView
            android:id="@+id/peselValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_margin="5pt"
            android:layout_row="3"
            android:text="91010122930"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"  />

        <TextView
            android:id="@+id/adresZamieszkaniaTextV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_margin="3pt"
            android:layout_row="4"
            android:text="@string/adresZamieszkaniaTextV"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"  />


        <TextView
            android:id="@+id/adresZamieszkaniaValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_margin="5pt"
            android:layout_row="4"
            android:text="ul. Świetna 9, 90-102 Kasztaniaki"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"  />

        <TextView
            android:id="@+id/adresKorTextV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_margin="3pt"
            android:layout_row="5"
            android:text="@string/adresKorTextV"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"  />


        <TextView
            android:id="@+id/adresKorValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_margin="5pt"
            android:layout_row="5"
            android:text="ul. Mleczna 12/11, 21-222 Kocie Budy"
            android:textColor="@android:color/background_light"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/oddzialNFZtextV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_margin="3pt"
            android:layout_row="6"
            android:text="@string/oddzialNFZtext"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"  />


        <TextView
            android:id="@+id/oddzialNFZValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_margin="5pt"
            android:layout_row="6"
            android:text="11"
            android:textColor="@android:color/background_light"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/telefonDoKontaktuTextV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_margin="3pt"
            android:layout_row="7"
            android:text="@string/telefonDoKontaktuTextV"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"  />


        <TextView
            android:id="@+id/telefonDoKontaktuValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_margin="5pt"
            android:layout_row="7"
            android:text="503 829 910"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"  />


    </GridLayout>
</RelativeLayout>



